--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,28 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Online Cookbook</title>
+
+    <!--Import Materialize CSS-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+
+</head>
+
+<body>
+    
+    {% for recipe in recipes %}
+    
+    <p>{{recipe}}</p>
+    
+    {% endfor %}
+
+
+    <!--Materialize JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
+
+</html>
