--- a/templates/index.html
+++ b/templates/index.html
@@ -10,127 +10,178 @@
     <!--Import Materialize CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/materialize.min.css') }}">
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
+
+    <!--Font icons to be used with Materialize components-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!--CSS style sheet-->
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}" type="text/css" />
+
 </head>
 
 <body>
 
-
-    <!--Navbar-->
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
-        </div>
-    </nav>
-
-
-    <!--Featured Recipe Display-->
-    <div class="row">
-
-        <div class="col s6">
-            Recipe image
+    <header>
+        <!--Navbar-->
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo"><img src="{{ url_for('static', filename = 'images/logo/logo.png') }}"></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="#submit-recipe">Submit a recipe</a></li>
+                        <li><a href="#search-recipe">Search our recipes</a></li>
+                        <li><a href="collapsible.html">JavaScript</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
 
-        <div class="col s6">
-            <h4>Featured Recipe: {{recipe_name}}</h4>
-            <h4>Summary: </h4>
-            <h4>Rating: </h4>
-        </div>
+    </header>
 
-    </div>
+    <main>
 
 
-    <!--Recipe Card Categories-->
-    <div class="row">
+        <!--Submit Recipe Display-->
 
-
-        <!--Card for meat category-->
-        <div class="col xl4 card">
-            <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}">
-            </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
-                <p><a href="#">This is a link</a></p>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Meat Recipes<i class="material-icons right">close</i></span>
-
-                <ol>
-                    {% for meat in type_meat %}
-
-                    <li>{{ meat["name"].capitalize() }}</li>
-
-                    {% endfor %}
-                </ol>
-
+        <div class="col s12 m7">
+            <h2 class="header center-align" id="submit-recipe">Submit a recipe</h2>
+            <div class="card horizontal card-panel hoverable">
+                <div class="card-image">
+                    <img src="{{ url_for('static', filename = 'images/homepage/submit-recipe.jpg') }}">
+                </div>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <h4>Featured Recipe: {{recipe_name}}</h4>
+                        <h4>Summary: </h4>
+                        <h4>Rating: </h4>
+                        <p>I am a very simple card. I am good at containing small bits of information.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">Submit a recipe</a>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <!--Card for vegetable category-->
-        <div class="col xl4 card">
-            <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}">
-            </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
-                <p><a href="#">This is a link</a></p>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">close</i></span>
-                
-                <ol>
-                    
-                    {% for vegetable in type_vegetable %}
 
-                    <li>{{ vegetable["name"].capitalize() }}</li>
+        <!--Recipe search title-->
+        <div class="header center-align" id="search-recipe">
+            <h1>Search our recipes</h1>
+        </div>
 
-                    {% endfor %}
-                    
-                </ol>
-                
+        <!--Recipe Card Categories-->
+        <div class="row">
+
+
+            <!--Card for meat category-->
+            <div class="col xl4 card card-panel hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Meat Recipes<i class="material-icons right">close</i></span>
+
+                    <ol>
+                        {% for meat in type_meat %}
+
+                        <li>{{ meat["name"].capitalize() }}</li>
+
+                        {% endfor %}
+                    </ol>
+
+                </div>
+            </div>
+
+            <!--Card for vegetable category-->
+            <div class="col xl4 card card-panel hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">close</i></span>
+
+                    <ol>
+
+                        {% for vegetable in type_vegetable %}
+
+                        <li>{{ vegetable["name"].capitalize() }}</li>
+
+                        {% endfor %}
+
+                    </ol>
+
+                </div>
+            </div>
+
+            <!--Card for dessert category-->
+            <div class="col xl4 card card-panel hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Dessert Recipes<i class="material-icons right">close</i></span>
+
+                    <ol>
+
+                        {% for dessert in type_dessert %}
+
+                        <li>{{ dessert["name"].capitalize() }}</li>
+
+                        {% endfor %}
+
+                    </ol>
+
+                </div>
             </div>
         </div>
 
-        <!--Card for dessert category-->
-        <div class="col xl4 card">
-            <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}">
+        {% for recipe in recipes %}
+
+        <p>{{ recipe }}</p>
+        <br />
+        <p>{{ recipe["name"] }}</p>
+
+        {% endfor %}
+
+    </main>
+
+
+
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row valign-wrapper">
+                <div class="col l6 s12 valign-wrapper">
+                    <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}" id="footer-logo">
+                    <p>Cookit-Mons &#174; 2019</p>
+                </div>
+                <div class="col l4 offset-l2 s12 center-align">
+                    <div class="sm-icon" id="social-media">
+                        <a class="facebook1" href="https://www.facebook.com/ConstHub" target="_blank" title="Facebook" rel="nofollow">
+                            <div class="facebook1"></div>
+                        </a>
+                        <a class="twitter1" href="https://twitter.com/ConstHub" target="_blank" title="Twitter" rel="nofollow">
+                            <div class="twitter1"></div>
+                        </a>
+                        <a class="linkdin1" href="https://www.linkedin.com/in/ConstHub" target="_blank" title="Linkedin" rel="nofollow">
+                            <div class="linkdin1"></div>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
-                <p><a href="#">This is a link</a></p>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Dessert Recipes<i class="material-icons right">close</i></span>
-                
-                <ol>
-                    
-                    {% for dessert in type_dessert %}
-
-                    <li>{{ dessert["name"].capitalize() }}</li>
-
-                    {% endfor %}
-                    
-                </ol>
-                
-            </div>
-        </div>
-    </div>
-
-
-    {% for recipe in recipes %}
-
-    <p>{{ recipe }}</p>
-    <br />
-    <p>{{ recipe["name"] }}</p>
-
-    {% endfor %}
-
+    </footer>
 
     <!--Materialize JavaScript at end of body for optimized loading-->
     <script src="{{ url_for('static', filename = 'js/materialize.min.js') }}"></script>
