--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,9 @@
 /*Resize and reposition the logo to fit the navigation bar*/
 .brand-logo > img {
     height:64px;
-    padding-left:10px;
 }
 
-#submit-recipe, #search-recipe{
+#search-recipe{
     color:blue;
 }
 
