--- a/templates/base.html
+++ b/templates/base.html
@@ -26,11 +26,10 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo"><img src="{{ url_for('static', filename = 'images/logo/logo.png') }}"></a>
+                    <a href="{{ url_for('index') }}" class="brand-logo"><img src="{{ url_for('static', filename = 'images/logo/logo.png') }}"></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="sass.html">Submit a recipe</a></li>
-                        <li><a href="badges.html">Components</a></li>
-                        <li><a href="collapsible.html">Search our recipes</a></li>
+                        <li><a href="{{ url_for('recipe_list') }}">Search our recipes</a></li>
                     </ul>
                 </div>
             </nav>
