--- a/templates/index.html
+++ b/templates/index.html
@@ -1,199 +1,117 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cookit-Mons</title>
+<!--Page title-->
+{% block title %}List of recipes{% endblock %}
 
-    <!--Import Materialize CSS-->
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/materialize.min.css') }}">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
 
-    <!--Font icons to be used with Materialize components-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Page content-->
+{% block content %}
 
-    <!--CSS style sheet-->
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}" type="text/css" />
-
-</head>
-
-<body>
-
-    <header>
-        <!--Navbar-->
-        <div class="navbar-fixed">
-            <nav>
-                <div class="nav-wrapper">
-                    <a href="#" class="brand-logo"><img src="{{ url_for('static', filename = 'images/logo/logo.png') }}"></a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="sass.html">Submit a recipe</a></li>
-                        <li><a href="badges.html">Components</a></li>
-                        <li><a href="collapsible.html">Search our recipes</a></li>
-                    </ul>
-                </div>
-            </nav>
+<!--Submit Recipe Display-->
+<div class="col s12 m7" id="submit-recipe">
+    <div class="card horizontal card-panel hoverable">
+        <div class="card-image hide-on-med-and-down">
+            <img src="{{ url_for('static', filename = 'images/homepage/submit-recipe.jpg') }}" alt="Cookit-Mons, the online cookbook">
         </div>
-
-    </header>
-
-    <main>
-
-
-        <!--Submit Recipe Display-->
-
-        <div class="col s12 m7" id="submit-recipe">
-            <div class="card horizontal card-panel hoverable">
-                <div class="card-image hide-on-med-and-down">
-                    <img src="{{ url_for('static', filename = 'images/homepage/submit-recipe.jpg') }}">
+        <div class="card-stacked">
+            <div class="card-content">
+                <div class="center-align">
+                    <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}">
                 </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <div class="center-align">
-                            <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}">
-                        </div>
-                        <h4>About Cookit-Mons</h4>
-                        <p>Cookit-Mons was created as a project by an aspiring full-stack developer in his dream to eat something besides instant ramen for the rest of his life.</p>
-                        <br />
-                        <p>Seeking the aid of chefs and home cooks everywhere, we beseech your help to combat our mutual nemesis, instant ramen</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">Submit a recipe!</a>
-                    </div>
-                </div>
+                <h4>About Cookit-Mons</h4>
+                <p>Cookit-Mons was created as a project by an aspiring full-stack developer in his dream to eat something besides instant ramen for the rest of his life.</p>
+                <br />
+                <p>Seeking the aid of chefs and home cooks everywhere, we beseech your help to combat our mutual nemesis, instant ramen</p>
+            </div>
+            <div class="card-action">
+                <a href="#">Submit a recipe!</a>
             </div>
         </div>
+    </div>
+</div>
 
 
-        <!--Recipe search title-->
-        <div class="header center-align" id="search-recipe">
-            <h1 class="pulse">Recipes of Cookit-Mon</h1>
+<!--Recipe search title-->
+<div class="header center-align" id="search-recipe">
+    <h1 class="pulse">Recipes of Cookit-Mon</h1>
+</div>
+
+<!--Recipe Card Categories-->
+<div class="row">
+
+    <!--Card for meat category-->
+    <div class="col xl4 card card-panel hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}" alt="Meat Recipes">
         </div>
-
-        <!--Recipe Card Categories-->
-        <div class="row">
-
-            <!--Card for meat category-->
-            <div class="col xl4 card card-panel hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">This is a link</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Meat Recipes<i class="material-icons right">close</i></span>
-
-                    <ol>
-                        {% for meat in type_meat %}
-
-                        <li>{{ meat["name"].capitalize() }}</li>
-
-                        {% endfor %}
-                    </ol>
-
-                </div>
-            </div>
-
-            <!--Card for vegetable category-->
-            <div class="col xl4 card card-panel hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">This is a link</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">close</i></span>
-
-                    <ol>
-
-                        {% for vegetable in type_vegetable %}
-
-                        <li>{{ vegetable["name"].capitalize() }}</li>
-
-                        {% endfor %}
-
-                    </ol>
-
-                </div>
-            </div>
-
-            <!--Card for dessert category-->
-            <div class="col xl4 card card-panel hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">This is a link</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Dessert Recipes<i class="material-icons right">close</i></span>
-
-                    <ol>
-
-                        {% for dessert in type_dessert %}
-
-                        <li>{{ dessert["name"].capitalize() }}</li>
-
-                        {% endfor %}
-
-                    </ol>
-
-                </div>
-            </div>
+        <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
+            <p><a href="#">This is a link</a></p>
         </div>
+        <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Meat Recipes<i class="material-icons right">close</i></span>
 
-        {% for recipe in recipes %}
+            <ol>
+                {% for meat in type_meat %}
 
-        <p>{{ recipe }}</p>
-        <br />
-        <p>{{ recipe["name"] }}</p>
+                <li><a href="{{ url_for('recipe_details', recipe_id=meat['_id']) }}">{{ meat["name"].capitalize() }}</a></li>
 
-        {% endfor %}
+                {% endfor %}
+            </ol>
 
-    </main>
+        </div>
+    </div>
+
+    <!--Card for vegetable category-->
+    <div class="col xl4 card card-panel hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}" alt="vegetable recipes">
+        </div>
+        <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
+            <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">close</i></span>
+
+            <ol>
+
+                {% for vegetable in type_vegetable %}
+
+                <li><a href="{{ url_for('recipe_details', recipe_id=vegetable['_id']) }}">{{ vegetable["name"].capitalize() }}</a></li>
+
+                {% endfor %}
+
+            </ol>
+
+        </div>
+    </div>
+
+    <!--Card for dessert category-->
+    <div class="col xl4 card card-panel hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}" alt="dessert recipes">
+        </div>
+        <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
+            <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Dessert Recipes<i class="material-icons right">close</i></span>
+
+            <ol>
+
+                {% for dessert in type_dessert %}
+
+                <li><a href="{{ url_for('recipe_details', recipe_id=dessert['_id']) }}">{{ dessert["name"].capitalize() }}</a></li>
+
+                {% endfor %}
+
+            </ol>
+
+        </div>
+    </div>
+</div>
 
 
-
-
-    <footer class="page-footer">
-        <div class="container">
-            <div class="row valign-wrapper">
-                <div class="col l6 s12 valign-wrapper">
-                    <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}" id="footer-logo">
-                    <p>Cookit-Mons &#174; 2019</p>
-                </div>
-                <div class="col l4 offset-l2 s12 center-align">
-                    <div class="sm-icon" id="social-media">
-                        <a class="facebook1" href="https://www.facebook.com/ConstHub" target="_blank" title="Facebook" rel="nofollow">
-                            <div class="facebook1"></div>
-                        </a>
-                        <a class="twitter1" href="https://twitter.com/ConstHub" target="_blank" title="Twitter" rel="nofollow">
-                            <div class="twitter1"></div>
-                        </a>
-                        <a class="linkdin1" href="https://www.linkedin.com/in/ConstHub" target="_blank" title="Linkedin" rel="nofollow">
-                            <div class="linkdin1"></div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-    </footer>
-
-    <!--JQuery-->
-    <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery-3.4.1.js') }}"></script>
-
-    <!--Materialize JavaScript at end of body for optimized loading-->
-    <script src="{{ url_for('static', filename = 'js/materialize.min.js') }}"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
-
-    <!--Website Javascript-->
-    <script type="text/javascript" src="{{ url_for('static', filename = 'js/script.js') }}"></script>
-
-</body>
-
-</html>
+{% endblock %}
