--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 <!--Page title-->
-{% block title %}List of recipes{% endblock %}
+{% block title %}Cookit-Mons{% endblock %}
 
 
 <!--Page content-->
@@ -21,7 +21,7 @@
                 <h4>About Cookit-Mons</h4>
                 <p>Cookit-Mons was created as a project by an aspiring full-stack developer in his dream to eat something besides instant ramen for the rest of his life.</p>
                 <br />
-                <p>Seeking the aid of chefs and home cooks everywhere, we beseech your help to combat our mutual nemesis, instant ramen</p>
+                <p>With the aid of chefs and home cooks everywhere, we seek your help to combat our mutual nemesis, instant ramen.</p>
             </div>
             <div class="card-action">
                 <a href="#">Submit a recipe!</a>
