--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 <p>With the aid of chefs and home cooks everywhere, we seek your help to combat our mutual nemesis, instant ramen.</p>
             </div>
             <div class="card-action">
-                <a href="#">Submit a recipe!</a>
+                <a href="{{ url_for('submit_recipe') }}">Submit a recipe!</a>
             </div>
         </div>
     </div>
