--- a/templates/submit-recipe.html
+++ b/templates/submit-recipe.html
@@ -23,27 +23,26 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
-                <input id="icon_prefix" type="text" name="recipe-name" class="validate">
+                <input id="icon_prefix" type="text" name="recipe-name" class="validate" required>
                 <label for="icon_prefix">Recipe Name</label>
             </div>
             <div class="input-field col s12 l4">
                 <i class="material-icons prefix">local_dining</i>
-                <input id="icon_telephone" type="number" class="validate" name="nutrition-facts">
+                <input id="icon_telephone" type="number" class="validate" name="nutrition-facts" required>
                 <label for="icon_telephone">Nutrition Facts (Calories)</label>
             </div>
             <div class="input-field col s12 l4">
                 <i class="material-icons prefix">access_time</i>
-                <input id="icon_telephone" type="number" name="cooking-time" class="validate">
+                <input id="icon_telephone" type="number" name="cooking-time" class="validate" required>
                 <label for="icon_telephone">Cooking Time (Mins)</label>
             </div>
             <!--Radio Button for type of recipe-->
             <div class="input-field col s12 l4">
                 <i class="material-icons prefix">cake</i>
-                <select>
-                  <option value="" disabled selected>Choose your option</option>
-                  <option value="1">Meat</option>
-                  <option value="2">Vegetable</option>
-                  <option value="3">Dessert</option>
+                <select name="type">
+                  <option value="meat" selected>Meat</option>
+                  <option value="vegetable">Vegetable</option>
+                  <option value="Dessert">Dessert</option>
                 </select>
                 <label>Type of Recipe</label>
             </div>
