Changed the recipes and prep steps from referenced to embedded data and added the complete function

--- a/templates/submit-recipe.html
+++ b/templates/submit-recipe.html
@@ -42,7 +42,7 @@
                 <select name="type">
                   <option value="meat" selected>Meat</option>
                   <option value="vegetable">Vegetable</option>
-                  <option value="Dessert">Dessert</option>
+                  <option value="dessert">Dessert</option>
                 </select>
                 <label>Type of Recipe</label>
             </div>
