--- a/templates/recipes-list.html
+++ b/templates/recipes-list.html
@@ -15,6 +15,16 @@
       </div>
     </div>
   </nav>
+  
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul class=flashes>
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
 
 {% endblock %}
 
