--- a/templates/base.html
+++ b/templates/base.html
@@ -52,11 +52,11 @@
     <footer class="page-footer">
         <div class="container">
             <div class="row valign-wrapper">
-                <div class="col l6 s12 valign-wrapper">
+                <div class="col s12 l6  valign-wrapper">
                     <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}" id="footer-logo">
                     <p>Cookit-Mons &#174; 2019</p>
                 </div>
-                <div class="col l4 offset-l2 s12 center-align">
+                <div class="col s12 l6 center-align">
                     <div class="sm-icon" id="social-media">
                         <a class="facebook1" href="https://www.facebook.com/" target="_blank" title="Facebook" rel="nofollow">
                             <div class="facebook1"></div>
