--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 
 
 <!--Recipe search title-->
-<div class="header center-align" id="search-recipe">
+<div class="header center-align purple-text text-accent-2">
     <h1 class="pulse">Recipes of Cookit-Mon</h1>
 </div>
 
