--- a/templates/recipe-detail.html
+++ b/templates/recipe-detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 
 <!--Page Title-->
-{% block title %}Recipe Detail: {{ recipe_detail['name'].capitalize() }}{% endblock %} 
+{% block title %}{{ recipe_detail['name'].capitalize() }}{% endblock %} 
 
 <!--Breadcrumb Navigation-->
 {% block header %}
@@ -37,6 +37,9 @@
     <div class="col s12 m4 center-align">
         <p><i class="material-icons center-align">access_time</i> <br /> Cooking Time : <br /> {{ recipe_detail['cooking_time'] }} mins</p>
     </div>
+    <div class="col s12 m4 center-align">
+        <p><i class="material-icons center-align">cake</i> <br /> Type of recipe : <br /> {{ recipe_detail['type'].capitalize() }} </p>
+    </div>
 </div>
 
 <div class="row center-align">
@@ -66,5 +69,14 @@
     </div>
 
 </div>
+
+<!--Update button-->
+        <div class="col l6 center-align" id="update-button">
+            
+        <button class="btn waves-effect waves-light" type="submit" name="action">
+            <a href="{{ url_for( 'update_recipe', recipe_id=recipe_detail['_id'] ) }}">Update Recipe</a>
+    <i class="material-icons right">edit</i>
+  </button>
+  </div>
 
 {% endblock %}
