--- a/templates/recipe-detail.html
+++ b/templates/recipe-detail.html
@@ -94,10 +94,10 @@
   
   
   <!--Delete button-->
-  <div class="col l6 center-align" id="update-button">
+  <div class="col l6 center-align" id="delete-button">
             
         <button class="btn waves-effect waves-light" type="submit" name="action">
-            <a href="{{ url_for( 'update_recipe', recipe_id=recipe_detail['_id'] ) }}">Delete Recipe</a>
+            <a href="{{ url_for( 'confirm_delete_recipe', recipe_id=recipe_detail['_id'] ) }}">Delete Recipe</a>
     <i class="material-icons right">edit</i>
   </button>
   </div>
