--- a/templates/index.html
+++ b/templates/index.html
@@ -31,10 +31,36 @@
 </div>
 
 
-<!--Recipe search title-->
-<div class="header center-align purple-text text-accent-2">
-    <h1 class="pulse">Recipes of Cookit-Mon</h1>
+<!--Knives carousel-->
+<div class="container">
+    <div class="center-align section">
+        <img class="responsive-img" src="{{ url_for('static', filename = 'images/knives/mac-knives-logo.jpg') }}">
+    </div>
+    <div class="carousel">
+        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-4-paring-knife-pk-40" target="_blank">
+            <img src="{{ url_for('static', filename = 'images/knives/mac-paring-knife.jpg') }}">ORIGINAL SERIES 4" PARING KNIFE (PK-40)
+        </a>
+        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-cleaver-cl-6" target="_blank">
+            <img src="{{ url_for('static', filename = 'images/knives/mac-cleaver-knife.jpg') }}">ORIGINAL SERIES 6 1/2" CLEAVER (CL-6)
+        </a>
+        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-utility-knife" target="_blank">
+            <img src="{{ url_for('static', filename = 'images/knives/mac-utility-knife.jpg') }}">ORIGINAL SERIES 6 1/2" UTILITY KNIFE (UK-60)
+        </a>
+        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-3-4-fillet-knife" target="_blank">
+            <img src="{{ url_for('static', filename = 'images/knives/mac-fillet-knife.jpg') }}">ORIGINAL SERIES 6 3/4" FILLET KNIFE (FK-70)
+        </a>
+        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/ck-90" target="_blank">
+            <img src="{{ url_for('static', filename = 'images/knives/mac-carving-knife.jpg') }}">ORIGINAL SERIES 9" CARVING KNIFE (CK-90)
+        </a>
+    </div>
+    <div class="section">
+        Entirely manufactured in Japan, MAC knives are precision tools, shaped, assembled, polished, and sharpened by professional Japanese craftsmen. Each knife is equipped with a razor-sharp edge, comfortable handles, and great balance. Popular with professional
+        cooks and cooking enthusiasts throughout the world, and over 25 million knives sold since 1964.
+    </div>
 </div>
+
+<!--Horizontal rule to separate the carousel from the recipe cards-->
+<hr />
 
 <!--Recipe Card Categories-->
 <div class="row">
@@ -46,7 +72,6 @@
         </div>
         <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
         </div>
         <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Meat Recipes<i class="material-icons right">close</i></span>
@@ -69,7 +94,6 @@
         </div>
         <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
         </div>
         <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">close</i></span>
@@ -94,7 +118,6 @@
         </div>
         <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
         </div>
         <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Dessert Recipes<i class="material-icons right">close</i></span>
@@ -112,6 +135,10 @@
         </div>
     </div>
 </div>
+
+
+
+
 
 
 {% endblock %}
